# datasets

./: .gitignore  .zenodo.json  AGENTS.md  API.md  CHANGELOG-multi-source.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET_DOCUMENTATION_WORKFLOW.md  Dockerfile  PROCESSING_GUIDE.md  RASTER_IMPLEMENTATION.md  README.md  README_PACKAGE.md  WORKFLOW_GUIDE.md  create-aws-k8s-secret.sh  gdal-numpy2-notes.md  hex-job.yaml  hex-subsets.ipynb  notes.md  pixi.toml  pmtiles-job.yaml  public-output-bucket-config.md  pyproject.toml  rclone-job.yaml  repartition-job.yaml  requirements.txt  set-bucket-cors.sh  set-rclone-conf.sh  todo.md  workflow-rbac.yaml  workflow.yaml
.github/: copilot-instructions.md
calenviroscreen/: read-ces.ipynb
carbon/: README.md  create-github-secret.sh  hexes.ipynb  job-thelio.yaml  job.py  job.yaml  process-carbon.sh  ray-cluster.yaml  ray_job.py  ray_job_test.py  run-job.sh
census/: census.ipynb
cng_datasets/: __init__.py  cli.py  hex_checks.py
cpad/: CPAD-explore.ipynb  README.md  cced-text.txt  convert-job.yaml  download.sh  hex-job.yaml  pmtiles-job.yaml  repartition-job.yaml  workflow-rbac.yaml  workflow.yaml
demos/: gbif-hexes.ipynb
docs/: .nojekyll  Makefile  README.md  api_reference.md  changelog.md  conf.py  configuration.md  contributing.md  examples.md  index.rst  installation.md  kubernetes_workflows.md  quickstart.md  raster_processing.md  requirements.txt  vector_processing.md
ecoregions/: README.md  run.sh
examples/: multi-source-workflow.md
fire/: fire-preprocess.py
fishbase/: README.md  mysql_docker_import.sh
gbif/: README.md  consolidate-job.yaml  consolidate_h0_partitions.py  gbif-hex-partitions.ipynb  hex-job.yaml  process_gbif_h3.py  test-integrity-job.yaml
h3geo/: README.md  index.html
hydrobasins/: README.md  combined-pmtiles-job.yaml  create_combined_pmtiles.sh  explore.ipynb  vec.py  (+6 more)
(+220 files in other folders)
