[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cng-datasets"
version = "0.1.1"
description = "Cloud-native geospatial dataset processing toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Boettiger Lab", email = "cboettig@berkeley.edu"}
]
dependencies = [
    "duckdb>=0.10.0",
    "ibis-framework[duckdb]>=9.0.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "geopandas>=0.14.0",
    "geoparquet-io>=0.7.0",
    "rasterio>=1.3.0",
    "numpy>=1.20.0",
    "kubernetes>=28.0.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0",
    "tippecanoe>=2.72.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
raster = [
    "GDAL>=3.11.0",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser",
    "sphinx-autobuild",
    "linkify-it-py",
]

[project.scripts]
cng-datasets = "cng_datasets.cli:main"
cng-convert-to-parquet = "cng_datasets.vector.convert_to_parquet:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cng_datasets*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
timeout = 10
timeout_method = "thread"
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "timeout: marks tests with timeout values (provided by pytest-timeout plugin)",
]
